# Pyhou

./: .gitignore  Pyhou.code-workspace  README.md  commentary.txt  commentary2.txt  game_logic.py  main.py  plan.txt  sarsa_test.py
Pyhou/: game_logic.py  main.py  plan.txt  pyproject.toml  size_comp.py
Pyhou Gym/: pyproject.toml
Pyhou Gym/pyhou_gym_env/: __init__.py
Pyhou Gym/pyhou_gym_env/wrappers/: __init__.py
Pyhou/attacks/: hard.json  speed_test.json  test_attack.json
Pyhou/components/: action.py  attack_pattern.py  constants.py  enemy.py  enemy_projectile.py  game_logic.py  player.py  projectile.py
Pyhou_gym/: README.md  env_test.py  pyproject.toml  requirements.txt  test.py  test_old.py  train.py  train_old.py
Pyhou_gym/attacks/: easy_shoot.json  hard.json  spam.json  spam_levelone.json
Pyhou_gym/models/: comment.txt
Pyhou_gym/pyhou_gym_env/envs/: __init__.py  pyhou.py  pyhou_gym.py  pyhou_gym_old.py
Pyhou_gym/pyhou_gym_env/wrappers/: __init__.py  frameskip.py  info_callback.py
RL_Test/: q_learning_test.py
attacks/: simple_attack.json  tele_test.json  test_attack.json
components/: action.py  attack_pattern.py  constants.py  enemy.py  enemy_projectile.py  plan.txt  player.py  projectile.py
