[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pyhou_gym_env"]

[tool.uv.sources]
pyhou = { path = "../Pyhou", editable = true}

[project]
name = "pyhou_gym_env"
requires-python = ">=3.13"
version = "0.0.1"
dependencies = [
  "gymnasium",
  "pygame>=2.1.3",
  "pre-commit",
  "pyhou",
  "stable-baselines3[extra]>=2.8.0",
]
